--- a/p8105_hw1_ml4701.md
+++ b/p8105_hw1_ml4701.md
@@ -4,11 +4,11 @@ Mengfan Luo (ml4701)
 
 ### Problem 1
 
-The following data frame `df` is constructed using tibble(). It is
+The following data frame `df` is constructed using `tibble()`. It is
 comprised of:
 
 -   random sample `norm_samp` of size 10 from a standard Normal
-    distribution
+    distribution. `set.seed(1234)` is used in the random generation.
 -   logical vector `vec_logic` indicating whether elements of the sample
     are greater than 0
 -   character vector `vec_char` of length 10
@@ -75,4 +75,45 @@ For character variables, the value can be arbitrary input and can be
 infinite, and they don’t have orders, so it’s difficult and meaningless
 to represent them as numeric values.
 
-## Problem 2
+### Problem 2
+
+package `palmerpenguins` has been installed and here I load the dataset
+`penguins` and view the first 6 lines of it.
+
+``` r
+data("penguins", package = "palmerpenguins")
+head(penguins)
+```
+
+    ## # A tibble: 6 x 8
+    ##   species island bill_length_mm bill_depth_mm flipper_length_~ body_mass_g sex  
+    ##   <fct>   <fct>           <dbl>         <dbl>            <int>       <int> <fct>
+    ## 1 Adelie  Torge~           39.1          18.7              181        3750 male 
+    ## 2 Adelie  Torge~           39.5          17.4              186        3800 fema~
+    ## 3 Adelie  Torge~           40.3          18                195        3250 fema~
+    ## 4 Adelie  Torge~           NA            NA                 NA          NA <NA> 
+    ## 5 Adelie  Torge~           36.7          19.3              193        3450 fema~
+    ## 6 Adelie  Torge~           39.3          20.6              190        3650 male 
+    ## # ... with 1 more variable: year <int>
+
+This dataset has 344 rows and 8 columns, the 8 variables including:
+species, island, bill\_length\_mm, bill\_depth\_mm, flipper\_length\_mm,
+body\_mass\_g, sex, year. Looking in to the variable
+`flipper_length_mm`, the mean flipper length (stripping `NA` values) is
+200.9152047 mm.
+
+The following is a scatterplot of flipper\_length\_mm (y) vs
+bill\_length\_mm (x), and the plot is saved in the project directory as
+`hw1_scatterplot.pdf`.
+
+``` r
+penguins %>% 
+  ggplot(aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + 
+  geom_point()
+```
+
+![](p8105_hw1_ml4701_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+
+``` r
+ggsave("hw1_scatterplot.pdf",height = 4, width = 6)
+```
