--- a/p8105_hw1_ml4701.md
+++ b/p8105_hw1_ml4701.md
@@ -23,7 +23,23 @@ df = tibble(
   vec_char = c("a","b","c","d","e","f","g","h","i","j"),
   vec_factor = factor(c("H","M","L","L","H","M","L","M","M","H"))
 )
+
+#Visualize as a table
+knitr::kable(df)
 ```
+
+| norm\_samp | vec\_logic | vec\_char | vec\_factor |
+|-----------:|:-----------|:----------|:------------|
+| -1.2070657 | FALSE      | a         | H           |
+|  0.2774292 | TRUE       | b         | M           |
+|  1.0844412 | TRUE       | c         | L           |
+| -2.3456977 | FALSE      | d         | L           |
+|  0.4291247 | TRUE       | e         | H           |
+|  0.5060559 | TRUE       | f         | M           |
+| -0.5747400 | FALSE      | g         | L           |
+| -0.5466319 | FALSE      | h         | M           |
+| -0.5644520 | FALSE      | i         | M           |
+| -0.8900378 | FALSE      | j         | H           |
 
 Taking the mean of each variable in data frame `df`, numeric variable
 `norm_samp` has the mean of -0.3831574, and logical vector `vec_logic`
@@ -78,23 +94,25 @@ to represent them as numeric values.
 ### Problem 2
 
 package `palmerpenguins` has been installed and here I load the dataset
-`penguins` and view the first 6 lines of it.
+`penguins` and view the first 10 lines of it.
 
 ``` r
 data("penguins", package = "palmerpenguins")
-head(penguins)
+knitr::kable(head(penguins,10))
 ```
 
-    ## # A tibble: 6 x 8
-    ##   species island bill_length_mm bill_depth_mm flipper_length_~ body_mass_g sex  
-    ##   <fct>   <fct>           <dbl>         <dbl>            <int>       <int> <fct>
-    ## 1 Adelie  Torge~           39.1          18.7              181        3750 male 
-    ## 2 Adelie  Torge~           39.5          17.4              186        3800 fema~
-    ## 3 Adelie  Torge~           40.3          18                195        3250 fema~
-    ## 4 Adelie  Torge~           NA            NA                 NA          NA <NA> 
-    ## 5 Adelie  Torge~           36.7          19.3              193        3450 fema~
-    ## 6 Adelie  Torge~           39.3          20.6              190        3650 male 
-    ## # ... with 1 more variable: year <int>
+| species | island    | bill\_length\_mm | bill\_depth\_mm | flipper\_length\_mm | body\_mass\_g | sex    | year |
+|:--------|:----------|-----------------:|----------------:|--------------------:|--------------:|:-------|-----:|
+| Adelie  | Torgersen |             39.1 |            18.7 |                 181 |          3750 | male   | 2007 |
+| Adelie  | Torgersen |             39.5 |            17.4 |                 186 |          3800 | female | 2007 |
+| Adelie  | Torgersen |             40.3 |            18.0 |                 195 |          3250 | female | 2007 |
+| Adelie  | Torgersen |               NA |              NA |                  NA |            NA | NA     | 2007 |
+| Adelie  | Torgersen |             36.7 |            19.3 |                 193 |          3450 | female | 2007 |
+| Adelie  | Torgersen |             39.3 |            20.6 |                 190 |          3650 | male   | 2007 |
+| Adelie  | Torgersen |             38.9 |            17.8 |                 181 |          3625 | female | 2007 |
+| Adelie  | Torgersen |             39.2 |            19.6 |                 195 |          4675 | male   | 2007 |
+| Adelie  | Torgersen |             34.1 |            18.1 |                 193 |          3475 | NA     | 2007 |
+| Adelie  | Torgersen |             42.0 |            20.2 |                 190 |          4250 | NA     | 2007 |
 
 This dataset has 344 rows and 8 columns, the 8 variables including:
 species, island, bill\_length\_mm, bill\_depth\_mm, flipper\_length\_mm,
