--- a/p8105_hw1_ml4701.md
+++ b/p8105_hw1_ml4701.md
@@ -8,7 +8,7 @@ The following data frame `df` is constructed using `tibble()`. It is
 comprised of:
 
 -   random sample `norm_samp` of size 10 from a standard Normal
-    distribution. `set.seed(1234)` is used in the random generation.
+    distribution. `set.seed(1234)` is used to fix the random generation.
 -   logical vector `vec_logic` indicating whether elements of the sample
     are greater than 0
 -   character vector `vec_char` of length 10
@@ -44,7 +44,7 @@ knitr::kable(df)
 Taking the mean of each variable in data frame `df`, numeric variable
 `norm_samp` has the mean of -0.3831574, and logical vector `vec_logic`
 has the mean of 0.4, while for character vector `vec_char` and factor
-vector `vec_factor`, taking mean of then will resulted in a warning
+vector `vec_factor`, taking mean of them will result in a warning
 message and get `NA` for the mean.
 
 ``` r
@@ -75,6 +75,7 @@ as.numeric(pull(df,vec_char))
 as.numeric(pull(df,vec_factor))
 ```
 
+Only logical and factor variables can be converted to numeric variables.
 This may because logical and factor variables stand for 2 or several
 categories and have limited numbers of value. logical values have only
 two values `TRUE` and `FALSE`, which can be easily encoded into `1` and
@@ -85,11 +86,12 @@ values.
 Factor variables should also have a predefined number of categories, and
 thus can be converted into the same amount of integers to present.
 However, factor values may or may not have levels and orders, and it’s
-meaningless to take mean to the encoded values if there’s no order.
+meaningless to take mean to the encoded values if there’s no order, and
+thus we cannot take mean for factor variables.
 
 For character variables, the value can be arbitrary input and can be
 infinite, and they don’t have orders, so it’s difficult and meaningless
-to represent them as numeric values.
+to represent them as numeric values, nor to calculate the mean.
 
 ### Problem 2
 
@@ -114,14 +116,46 @@ knitr::kable(head(penguins,10))
 | Adelie  | Torgersen |             34.1 |            18.1 |                 193 |          3475 | NA     | 2007 |
 | Adelie  | Torgersen |             42.0 |            20.2 |                 190 |          4250 | NA     | 2007 |
 
-This dataset has 344 rows and 8 columns, the 8 variables including:
-species, island, bill\_length\_mm, bill\_depth\_mm, flipper\_length\_mm,
-body\_mass\_g, sex, year. Looking in to the variable
-`flipper_length_mm`, the mean flipper length (stripping `NA` values) is
-200.9152047 mm.
+``` r
+colnames_peng = colnames(penguins) # create a new instance to store column names in dataset panguins
+```
 
-The following is a scatterplot of flipper\_length\_mm (y) vs
-bill\_length\_mm (x), and the plot is saved in the project directory as
+``` r
+skimr::skim(penguins)
+```
+
+Further looking into the dataset using `skim`, it has `344` rows and `8`
+columns. There are `19` numbers missing. The 8 variables including:
+
+-   `species`: factor variable with 3 distinct values. It has `0`
+    missing values.
+
+-   `island`: factor variable with 3 distinct values. It has `0` missing
+    values.
+
+-   `bill_length_mm`: numeric variable with mean `43.9219298` and range
+    `[32.1, 59.6]`. It has `2` missing values.
+
+-   `bill_depth_mm`: numeric variable with mean `17.1511696` and range
+    `[13.1, 21.5]`. It has `2` missing values.
+
+-   `flipper_length_mm`: numeric variable with mean `200.9152047` and
+    range `[172, 231]`. It has `2` missing values.
+
+-   `body_mass_g`: numeric variable with mean `4201.754386` and range
+    `[2700, 6300]`. It has `2` missing values.
+
+-   `sex`: factor variable with 2 distinct values. It has `11` missing
+    values.
+
+-   `year`: numeric variable of integers `2007`,`2008` and `2009`. It
+    has `0` missing values.
+
+Looking in to the variable `flipper_length_mm`, the mean flipper length
+(stripping `NA` values) is `200.9152047` mm.
+
+The following is a scatterplot of `flipper_length_mm` (y) vs
+`bill_length_mm` (x), and the plot is saved in the project directory as
 `hw1_scatterplot.pdf`.
 
 ``` r
@@ -130,7 +164,7 @@ penguins %>%
   geom_point()
 ```
 
-![](p8105_hw1_ml4701_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+![](p8105_hw1_ml4701_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 
 ``` r
 ggsave("hw1_scatterplot.pdf",height = 4, width = 6)
