--- a/p8105_hw1_ml4701.md
+++ b/p8105_hw1_ml4701.md
@@ -159,9 +159,7 @@ The following is a scatterplot of `flipper_length_mm` (y) vs
 `hw1_scatterplot.pdf`.
 
 ``` r
-penguins %>% 
-  ggplot(aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + 
-  geom_point()
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
 ```
 
 ![](p8105_hw1_ml4701_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
